<resources>
    <string name="app_name">SimpleJet</string>
    <string name="send">fly</string>
    <string name="pw">password</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="submit">submit</string>
    <string name="have_account">I already have an account</string>
    <string name="no_account">I don\'t have an account</string>
</resources>
